Nueva Version Stable

--- a/aprsbc.conf
+++ b/aprsbc.conf
@@ -6,9 +6,10 @@ MyPass="MY-PASS"
 MyLat="MY-LAT"
 MyLong="MY-LONG"
 MyText="MY-TEXT"
+MyIcon="&"
 ServerHost="rotate.aprs2.net"
 ServerPort="14580"
-UpdDelay=30
+UpdDelay=60
 SerialPort="/dev/ttyUSB0"
 SerialSpeed="9600"
 #
